# TeenyAT

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build.sh  led.c  main.c  syntax.asm  tbone.asm  teenyat.c  teenyat.h  teenyat_instruction_set.md  teenyat_isa.odt  teenyat_old_overview.odp  teenyat_old_overview.pptx
docs/: ISO.md  README.md  leroy.md  set.md  teenyat_instruction_set.md
docs/instructions/: add.md  and.md  btc.md  btf.md  bts.md  cal.md  cmp.md  dec.md  div.md  dly.md  inc.md  int.md  je.md  jg.md  jge.md  jl.md  jle.md  jmp.md  jne.md  lod.md  lup.md  mod.md  mpy.md  neg.md  or.md  pop.md  psh.md  ret.md  rol.md  ror.md  rot.md  rti.md  set.md  shf.md  shl.md  shr.md  str.md  sub.md  xor.md
edison/: CMakeLists.txt  Makefile  README.md  audio.c  audio.h  edison_board.cpp  edison_board.h  edison_sprite_locations.h  generate_assets.cpp  lcd_screen.cpp  lcd_screen.h  leds.cpp  leds.h  main.cpp  miniaudio.h  utils.cpp
edison/asm/: aero_jump.asm  code_breaker.asm  example_buzzer.asm  example_cycle_cnt.asm  example_dpad.asm  example_fader.asm  example_lcd.asm  example_led.asm  example_timers_event_mode.asm  example_timers_level_mode.asm  example_timers_timer_mode.asm  example_wall_time.asm  fur_elise.asm  happy_birthday.asm  twinkle_twinkle.asm
experiment-board/: audio.c  edison_board.cpp  miniaudio.h  segment.cpp  segment.h
expirement-board/: Makefile  audio.c  audio.h  edison_board.cpp  edison_board.h  edison_sprite_locations.h  lcd_screen.cpp  lcd_screen.h  leds.cpp  main.cpp  utils.cpp  utils.h
lcd/: CMakeLists.txt  Makefile  README.md  color.cpp  color.h  main.cpp  screen.cpp  screen.h  util.cpp  util.h
lcd/asm/: addresses.asm  christmas.asm  ex10_idk.asm  ex11_mouse.asm  ex2_horizontal_lines.asm  ex4_pixel_clusters.asm  ex8_pipes.asm  ex9_random.asm  example_christmas.asm  example_color_picker.asm  example_horizontal_lines.asm  example_idk.asm  example_interrupts.asm  example_keyboard.asm  example_magma_maze.asm  example_mosaic.asm  example_mouse.asm  example_pipes.asm  example_pixel_clusters.asm  example_random.asm  example_screen_color_change.asm  pallete.asm  rectangle.asm  vertical.asm
lcd/include/: Screen.h
lcd/src/: color.cpp  main.cpp  screen.cpp
testSystem/: Makefile  output.trash  testSystemNotes.txt
testSystem/ASMCODE/: addresses.asm  pallete.asm  point.asm  rectangle.asm
testSystem/asmblr/: Makefile
testSystem/asmblr/headers/: grammarFunctions.hpp
testSystem/asmblr/src/: asmblr.cpp  grammarFunctions.cpp
testSystem/asmblr/testAsmCode/: test.asm  test.tok
testSystem/asmblr/testCode/: result.b  test.asm  withoutGrammar.asm
testSystem/gui/: Makefile  output.b  output.trash  test.asm
testSystem/gui/ASMS/: point.asm
testSystem/gui/src/: Screen.h  color.cpp  color.h  main.cpp  util.cpp  util.h
testSystem/gui/src/tigr/: Makefile  tigr_internal.h  tigr_osx.c  tigr_win.c
testSystem/trash/: Makefile
testSystem/trash/headers/: grammarFunctions.hpp
testSystem/trash/src/: asmblr.cpp  grammarFunctions.cpp
tnasm/: CMakeLists.txt  Makefile  blocks.c  blocks.h  grammar.txt  junk.y  lemon.c  lexer.cpp  list.c  list.h  listing.c  listing.cpp  listing.h  mash.y  parser.cpp  parser.h  reference_grammar.y  symbol_tables.c  symbol_tables.h  syntax.asm  test.asm  tnasm.lex  tnasm.y  token.c  token.h  tokens.txt  util.c  util.h  warnings.cpp  warnings.h
tnasm/vscode_syntax_highlighting/teenyat-assembly-language/: README.md  language-configuration.json  package.json
tnasm/vscode_syntax_highlighting/teenyat-assembly-language/syntaxes/: teenyat-assembly.tmLanguage.json
